08-02-19

attributes allow commas

tidying, Excel plugin work

07-02-19

Case insensitive choices - allow dec-18 if a list has Dec-18, latest MySQL driver, double check query names are ordered, properties for new Ed Broking windows server

SHould be improved error messages

05-02-19

Single import process work. UI improvements, zip feedback, list pending uploads based on the user's team

with new 'provisional' clause (provisional = only insert into set if not already categorised as some other element of the set)

Does not import hidden sheets

01-02-19

Pending uploads optimizeation, UI tweaks, Region size limit pushed to 5 million for big risk data summary

23-01-19

Starting work based off the Alex/Oliver meetings, temporary memory copy of a DB and revisions to the pending upload table. Old revert/commit stuff removed

21-01-19

Initial version of query validation feedback (on pending uploads)

Checks for the start of the template name, rather than the whole name

19-01-19

Considerable work on query validation, initial version

18-01-19-2

! Completed changes to make the permissions held against the session more robust

18-01-19

! Bug fix for rebuilding dev

16-01-19-2

! Bug fix on improved upload feedback

16-01-19

Includes 'fillSpecialRegions' - these are regions without row headings that will be treated as imports. Currently the save flags are now working on these regions

With routine to send mail on saving the sheet

Bug fix on uploaded files list, better feedback on headings used in imported files

Dependant on forces all exact - fix for the contract split problem

Queries executed at book level

15-01-19

Converts percentages in 'DEFAULT' to numbers

Will look for worksheets that share a first name with the imported file as 'Import Model'

Will accept that any workbook named '... import templates' is a set of import templates

Bug fixing for "applies to" calc stuff, being used again at Ed Broking
