@@ -1,3 +1,7 @@
+13-02-09
+
+Import templates linked to databases and backups, improved progress feedback during import/validation, reject button working, concurrent modification check, broaksure XML export changes
+
 08-02-19
 
 attributes allow commas
